--- a/src/app/shared/components/attachment-preview/attachment-preview.component.scss
+++ b/src/app/shared/components/attachment-preview/attachment-preview.component.scss
@@ -4,6 +4,27 @@ section {
   align-items: center;
   width: 100%;
   height: 100%;
+
+  > div {
+    width: 100%;
+    height: 100%;
+  }
+
+  &:hover {
+    .close-icon {
+      display: block !important;
+    }
+
+    .arrow-left,
+    .arrow-right {
+      display: block !important;
+    }
+  }
+}
+
+.image-container {
+  width: 100%;
+  height: 100%;
 }
 
 .image {
@@ -11,11 +32,6 @@ section {
   width: 100% !important;
   height: 100% !important;
   border-radius: 30px;
-  border: 1px solid var(--light-purple-color);
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
   img {
     width: 100%;
@@ -29,12 +45,6 @@ section {
     left: 50%;
     transform: translate(-50%, -50%);
   }
-
-  &:hover {
-    .close-icon {
-      display: block !important;
-    }
-  }
 }
 
 .close-icon {
@@ -45,6 +55,7 @@ section {
   padding: 3px;
   border-radius: 100px;
   background-color: var(--bg-color);
+  z-index: 100;
 
   &:hover {
     cursor: pointer;
@@ -53,4 +64,32 @@ section {
   mat-icon {
     color: var(--purple1-color);
   }
+}
+
+.arrow-left {
+  position: absolute;
+  top: 50%;
+  left: 23px;
+  transform: translateY(-50%);
+  padding: 10px;
+  border-radius: 100px;
+  background-color: var(--bg-color);
+  color: var(--purple1-color);
+  z-index: 100;
+  display: none !important;
+  cursor: pointer;
+}
+
+.arrow-right {
+  position: absolute;
+  top: 50%;
+  right: 2px;
+  transform: translateY(-50%);
+  padding: 10px;
+  border-radius: 100px;
+  background-color: var(--bg-color);
+  color: var(--purple1-color);
+  z-index: 100;
+  display: none !important;
+  cursor: pointer;
 }
