--- a/src/app/main/header/header.component.scss
+++ b/src/app/main/header/header.component.scss
@@ -44,6 +44,8 @@ header {
       img {
         height: 70px;
         width: 70px;
+        object-fit: cover;
+        object-position: top;
         border-radius: 50%;
       }
 
