--- a/src/app/shared/profile-info-dialog/profile-info-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/profile-info-dialog.component.scss
@@ -34,6 +34,8 @@
     align-self: center;
     height: 200px;
     width: 200px;
+    object-fit: cover;
+    object-position: top;
     border-radius: 50%;
   }
 
