Changed the Observables for the userdata in a central map in the userservice to make the code more flexible and prevent unnecessary reloads.

--- a/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.scss
+++ b/src/app/main/main-message-area/thread/thread-new-message/thread-new-message.component.scss
@@ -105,6 +105,11 @@ textarea {
   display: flex;
   justify-content: space-between;
   color: var(--grey-color);
+
+  > mat-icon {
+    height: 40px;
+    width: 40px;
+  }
 }
 
 .send-icon {
