--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
@@ -1,154 +1,178 @@
 section {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    color: black;
-    font-family: var(--font-nunito);
-    white-space: pre-wrap;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  color: black;
+  font-family: var(--font-nunito);
+  white-space: pre-wrap;
 
-    mat-icon {
-      color: var(--black-color);
-    }
+  mat-icon {
+    color: var(--black-color);
   }
-  
-  .first-line,
-  .last-line {
-    flex-grow: 1;
-    height: 1px;
-    background-color: var(--light-purple-color);
-  }
-  
-  .add-emoji-container {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    padding: 0 30px;
-  }
-  
-  .inner-add-emoji-container {
+}
+
+.first-line,
+.last-line {
+  flex-grow: 1;
+  height: 1px;
+  background-color: var(--light-purple-color);
+}
+
+.add-emoji-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 0 30px;
+}
+
+.inner-add-emoji-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--text-color);
+  border: 1px solid var(--light-purple-color);
+  border-radius: 30px 30px 0px 30px;
+  margin-bottom: -20px;
+  z-index: 10;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  padding: 2px 10px;
+
+  div {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 30px;
+    transition: background-color 0.3s ease;
+    &:hover {
+      background-color: var(--bg-color);
+    }
+    svg:hover {
+      fill: var(--purple3-color);
+    }
+  }
+}
+
+.inner-add-emoji-container-show {
+  visibility: unset !important;
+  opacity: 1 !important;
+  cursor: pointer;
+}
+
+.message-container {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 10px 30px;
+  gap: 20px;
+}
+
+.message-container-hover {
+  cursor: pointer;
+  background-color: var(--bg-color);
+
+  .message {
     background-color: var(--text-color);
-    border: 1px solid var(--light-purple-color);
-    border-radius: 30px 30px 0px 30px;
-    margin-bottom: -20px;
-    z-index: 10;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-    padding: 2px 10px;
-  
-    div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      border-radius: 30px;
-      transition: background-color 0.3s ease;
-      &:hover {
-        background-color: var(--bg-color);
-      }
-      svg:hover {
-        fill: var(--purple3-color);
-      }
-    }
   }
-  
-  .inner-add-emoji-container-show {
-    visibility: unset !important;
-    opacity: 1 !important;
+
+  .thread span:last-of-type {
+    color: var(--black-color);
+  }
+}
+
+img {
+  width: 70px;
+  height: 70px;
+  border-radius: 100px;
+  object-fit: cover;
+  object-position: top;
+
+  &:hover {
     cursor: pointer;
   }
- 
-  .message-container {
-    width: 100%;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.name-and-time {
+  height: 25px;
+  display: flex;
+  gap: 30px;
+  position: relative;
+}
+
+.name {
+  font-weight: 700 !important;
+
+  &:hover {
+    cursor: pointer;
+    color: var(--purple3-color);
+  }
+}
+
+.time {
+  color: var(--grey-color);
+  font-size: 14px;
+  align-self: center;
+}
+
+.message {
+  border-radius: 0px 30px 30px 30px;
+  background-color: var(--bg-color);
+  padding: 10px 20px;
+  position: relative;
+  display: flex;
+  width: fit-content;
+  flex-direction: column;
+  > p {
     display: flex;
-    align-items: flex-start;
     justify-content: flex-start;
-    padding: 10px 30px;
-    gap: 20px;
+    padding-bottom: 10px;
   }
-  
-  .message-container-hover {
-    cursor: pointer;
-    background-color: var(--bg-color);
-  
-    .message {
-      background-color: var(--text-color);
-    }
-  
-    .thread span:last-of-type {
-      color: var(--black-color);
-    }
-  }
-  
-  img {
-    width: 70px;
-    height: 70px;
-    border-radius: 100px;
+}
+
+.attachment-container {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.thread {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+
+  span:first-of-type {
+    color: var(--purple3-color);
 
     &:hover {
-      cursor: pointer;
-    }
-  }
-  
-  .text-container {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .name-and-time {
-    height: 25px;
-    display: flex;
-    gap: 30px;
-    position: relative;
-  }
-  
-  .name {
-    font-weight: 700 !important;
-  
-    &:hover {
-      cursor: pointer;
-      color: var(--purple3-color);
+      font-weight: 700 !important;
     }
   }
 
-  .time {
+  span:last-of-type {
     color: var(--grey-color);
     font-size: 14px;
-    align-self: center;
   }
-  
-  .message {
-    border-radius: 0px 30px 30px 30px;
-    background-color: var(--bg-color);
-    padding: 10px 20px;
-    position: relative;
-    display: flex;
-    width: fit-content;
-  }
-  
-  .thread {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    
-    span:first-of-type {
-      color: var(--purple3-color);
-  
-      &:hover {
-        font-weight: 700 !important;
-      }
-    }
-  
-    span:last-of-type {
-      color: var(--grey-color);
-      font-size: 14px;
-    }
-  }
+}
+
+app-attachment-preview {
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
