--- a/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.scss
+++ b/src/app/main/main-message-area/message-area-header/channel-members-list/channel-members-list.component.scss
@@ -58,6 +58,8 @@ h2 {
     width: 50px;
     height: 50px;
     border-radius: 30px;
+    object-fit: cover;
+    object-position: top;
   }
 
   span {
@@ -98,11 +100,11 @@ h2 {
     color: var(--purple3-color);
 
     span {
-      transform: scale(1.02); 
+      transform: scale(1.02);
     }
 
     svg {
-      transform: scale(1.05); 
+      transform: scale(1.05);
     }
   }
 }
