--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
@@ -6,13 +6,17 @@
     <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
   </div>
   <span class="message-own">
-    {{ message?.content }}
+    <p>{{ message?.content }}</p>
     <div *ngIf="message?.attachmentUrls?.length > 0">
       <a
         *ngFor="let attachmentUrl of message.attachmentUrls"
         [href]="attachmentUrl"
+        class="attachment-container"
       >
-        <app-attachment-preview [actualAttachmentUrls]="[attachmentUrl]" [message]="message">
+        <app-attachment-preview
+          [actualAttachmentUrls]="[attachmentUrl]"
+          [message]="message"
+        >
         </app-attachment-preview>
       </a>
     </div>
