--- a/src/app/shared/components/mention-user/mention-user.component.scss
+++ b/src/app/shared/components/mention-user/mention-user.component.scss
@@ -1,62 +1,60 @@
 section {
-    color: black;
-    font-family: var(--font-nunito);
-    width: 100%;
+  color: black;
+  font-family: var(--font-nunito);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.members-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.member {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  border-radius: 30px;
+  padding: 5px 20px;
+  width: fit-content;
+
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    object-fit: cover;
+    object-position: top;
+  }
+
+  span {
+    font-size: 18px;
+    font-weight: 400;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: var(--bg-color);
+    color: var(--purple3-color);
+  }
+}
+
+.placeholder {
+  width: 100%;
+  display: flex;
+
+  p {
     display: flex;
     align-items: center;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .members-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .member {
-    display: flex;
-    align-items: center;
-    gap: 20px;
     border-radius: 30px;
     padding: 5px 20px;
     width: fit-content;
-  
-    img {
-      width: 50px;
-      height: 50px;
-      border-radius: 30px;
-    }
-  
-    span {
-      font-size: 18px;
-      font-weight: 400;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-  
-    &:hover {
-      cursor: pointer;
-      background-color: var(--bg-color);
-      color: var(--purple3-color);
-    }
   }
-
-  .placeholder {
-    width: 100%;
-    display: flex;
-
-    p {
-      display: flex;
-      align-items: center;
-      border-radius: 30px;
-      padding: 5px 20px;
-      width: fit-content;
-    }
-  }
-  
- 
-   
-  
+}
