--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.scss
@@ -135,10 +135,11 @@ img {
   display: flex;
   width: fit-content;
   flex-direction: column;
+  gap : 10px;
   > p {
     display: flex;
     justify-content: flex-start;
-    padding-bottom: 10px;
+    padding-left: 5px;
   }
 }
 
