--- a/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.scss
+++ b/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.scss
@@ -151,10 +151,12 @@ img {
   display: flex;
   width: fit-content;
   flex-direction: column;
+  gap: 10px;
+
   > p {
     display: flex;
     justify-content: flex-start;
-    padding-bottom: 10px;
+    padding-left: 5px;
   }
 }
 
