--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.scss
@@ -89,12 +89,14 @@ section {
   border: 1px solid var(--light-purple-color);
 }
 
-textarea {
+.editable-message {
   width: 100%;
   height: 65%;
+  color: black;
+  font-family: var(--font-nunito);
+  font-size: var(--fontsize-16);
   resize: none;
   outline: none;
-  border: none;
   padding: 20px 10px;
 }
 
