Own user can not be removed when creating new channel

--- a/src/app/shared/components/add-users-to-channel/add-users-to-channel.component.html
+++ b/src/app/shared/components/add-users-to-channel/add-users-to-channel.component.html
@@ -4,7 +4,11 @@
     <mat-chip-row (removed)="remove(user)">
       <img src="{{ user.photoURL }}" alt="" />
       {{ user.userName }}
-      <button matChipRemove [attr.aria-label]="'remove ' + user">
+      <button
+        matChipRemove
+        *ngIf="user.userId != userData.uid"
+        [attr.aria-label]="'remove ' + user"
+      >
         <mat-icon>close</mat-icon>
       </button>
     </mat-chip-row>
