addd imprint and privacy-policy content

--- a/src/app/shared/components/imprint/imprint.component.html
+++ b/src/app/shared/components/imprint/imprint.component.html
@@ -1,1 +1,14 @@
-<p>imprint works!</p>
+<h1>Impressum</h1>
+
+<p>
+  Mr. Mustermann<br />
+  Test Stra&szlig;e, 123<br />
+  12345 Musterort
+</p>
+
+<h2>Kontakt</h2>
+<p>
+  Telefon: +49 (0) 123 44 55 66<br />
+  Telefax: nicht vorhanden.<br />
+  E-Mail: email.adresse&#64;mail.de
+</p>
