Loading data fluently

--- a/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
+++ b/src/app/main/side-nav/add-users-to-new-channel-dialog/add-users-to-new-channel-dialog.component.html
@@ -10,9 +10,7 @@
       (ngModelChange)="checkChoice()"
     >
       <mat-radio-button [value]="1"
-        >Alle Mitglieder von
-        <span class="channel-name">OfficeTeam</span>
-        hinzufügen</mat-radio-button
+        >Alle Mitglieder hinzufügen</mat-radio-button
       >
       <mat-radio-button [value]="2"
         >Bestimmte Leute hinzufügen</mat-radio-button
