changed the observable for userdata to a map at sidenav.

--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -3,6 +3,7 @@
     <textarea
       placeholder="Nachricht an #Entwicklerteam"
       [(ngModel)]="newMessageContent"
+      (ngModelChange)="updateFormattedContent()"
       (keydown.enter)="sendMessage(); $event.preventDefault()"
     ></textarea>
     <div class="icons-container">
