Styles for label-btn

--- a/src/app/shared/profile-info-dialog/avatar-dialog/avatar-dialog.component.html
+++ b/src/app/shared/profile-info-dialog/avatar-dialog/avatar-dialog.component.html
@@ -63,7 +63,11 @@
         (change)="onFileSelected($event)"
         hidden
       />
-      <label for="file-upload" mat-flat-button class="button-secondary">
+      <label
+        for="file-upload"
+        mat-flat-button
+        class="button-secondary label-btn"
+      >
         Datei hochladen
       </label>
     </div>
