--- a/src/app/landing-page/register/select-avatar/select-avatar.component.html
+++ b/src/app/landing-page/register/select-avatar/select-avatar.component.html
@@ -72,7 +72,11 @@
           (change)="onFileSelected($event)"
           hidden
         />
-        <label for="file-upload" mat-flat-button class="button-secondary">
+        <label
+          for="file-upload"
+          mat-flat-button
+          class="button-secondary label-btn"
+        >
           Datei hochladen
         </label>
       </div>
