--- a/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
+++ b/src/app/main/main-message-area/message-area-new-message/message-area-new-message.component.html
@@ -1,7 +1,9 @@
 <section>
   <div class="textarea-container">
     <textarea
-      placeholder="Nachricht an #Entwicklerteam"
+      [placeholder]="
+        'Nachricht an #' + (channel?.channelName ?? 'einen Channel')
+      "
       [(ngModel)]="newMessageContent"
       (ngModelChange)="updateFormattedContent()"
       (keydown.enter)="sendMessage(); $event.preventDefault()"
