--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -1,12 +1,14 @@
 <header>
-  <div class="logo">
-    <img src="assets/img/logo.webp" alt="" />
-    <img src="assets/img/logo_name.webp" alt="" />
+  <div class="logo-search-wrapper">
+    <div class="logo">
+      <img src="assets/img/logo.webp" alt="" />
+      <img src="assets/img/logo_name.webp" alt="" />
+    </div>
+    <app-search-bar
+      [placeholder]="'Devspace durchsuchen'"
+      [searchIconExists]="true"
+    ></app-search-bar>
   </div>
-  <app-search-bar
-    [placeholder]="'Devspace durchsuchen'"
-    [searchIconExists]="true"
-  ></app-search-bar>
   <div class="profile" (click)="toggleDropdown()">
     <p *ngIf="userData">{{ userData.displayName }}</p>
     <div class="image-with-badge">
