--- a/src/styles.scss
+++ b/src/styles.scss
@@ -253,7 +253,7 @@ mat-icon {
 textarea,
 input {
   font-family: var(--font-nunito) !important;
-  font-size: 16px !important;
+  font-size: 16px;
 }
 
 /* FONTS */
