Fixed some bugs at channel chat-history.

--- a/src/app/main/header/header.component.html
+++ b/src/app/main/header/header.component.html
@@ -6,6 +6,7 @@
   <app-search-bar
     [placeholder]="'Devspace durchsuchen'"
     [searchIconExists]="true"
+    [inputFont]="true"
   ></app-search-bar>
   <div class="profile" (click)="toggleDropdown()">
     <p *ngIf="userData">{{ userData.displayName }}</p>
