--- a/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.html
+++ b/src/app/main/new-message-placeholder/new-message-header/new-message-header.component.html
@@ -3,5 +3,6 @@
   <app-search-bar
     [placeholder]="'An: #channel, oder @jemand oder E-Mail-Adresse'"
     [searchIconExists]="true"
+    [inputFont]="false"
   ></app-search-bar>
 </mat-toolbar>
