--- a/src/app/shared/profile-info-dialog/profile-info-dialog.component.scss
+++ b/src/app/shared/profile-info-dialog/profile-info-dialog.component.scss
@@ -6,6 +6,11 @@
   gap: 38px;
   width: 500px;
 
+  @media screen and (max-width: 640px) {
+    width: 100%;
+    padding: 45px 20px;
+  }
+
   .card-header {
     h3 {
       font-size: 24px;
@@ -13,20 +18,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  .icon {
+    height: 40px;
+    width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
 
-    mat-icon {
-      height: 40px;
-      width: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 30px;
-
-      &:hover {
-        cursor: pointer;
-        color: var(--purple1-color);
-        background-color: var(--bg-color);
-      }
+    &:hover {
+      cursor: pointer;
+      color: var(--purple1-color);
+      background-color: var(--bg-color);
     }
   }
 
@@ -49,12 +53,29 @@
       justify-content: space-between;
       align-items: center;
 
+      h2 {
+        @media screen and (max-width: 460px) {
+          text-align: center;
+        }
+      }
+
       span {
         color: var(--purple3-color);
 
         &:hover {
           cursor: pointer;
           font-weight: 700;
+        }
+
+        @media screen and (max-width: 640px) {
+          display: none !important;
+        }
+      }
+
+      mat-icon {
+        margin-left: 10%;
+        @media screen and (min-width: 640px) {
+          display: none !important;
         }
       }
     }
@@ -82,9 +103,24 @@
       flex-direction: column;
       gap: 16px;
 
+      span {
+        font-size: 20px;
+        font-weight: 700;
+      }
+
       a {
         text-decoration: none;
         color: var(--blue-color);
+
+        &:focus-visible {
+          outline: none;
+        }
+
+        @media screen and (max-width: 460px) {
+          inline-size: 170px;
+          overflow-wrap: break-word;
+          hyphens: auto;
+        }
       }
     }
   }
